<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_item1" />
        <item
            android:id="@+id/drawer_item2"
            android:title="@string/drawer_item2" />
        <item
            android:id="@+id/drawer_item3"
            android:title="@string/drawer_item3" />
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Posicionamiento">
        <menu>
            <item
                android:id="@+id/drawer_item4"
                android:icon="@drawable/ic_menu"
                android:title="@string/drawer_item4"/>
            <item
                android:id="@+id/drawer_item5"
                android:icon="@drawable/ic_menu"
                android:title="2"/>
        </menu>
    </item>

</menu>