<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbar_item1"
        android:icon="@android:drawable/ic_dialog_map"
        android:orderInCategory="100"
        android:title="@string/toolbar_item1"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/toolbar_item2"
        android:icon="@android:drawable/ic_menu_set_as"
        android:orderInCategory="101"
        android:title="@string/toolbar_item2"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/toolbar_item3"
        android:icon="@android:drawable/btn_star"
        android:orderInCategory="102"
        android:title="@string/toolbar_item3"
        app:showAsAction="collapseActionView" />
</menu>